# 2D_FEM_Solver

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
Source/: CMakeLists.txt  main.cc  main.h
Source/MathIO/: CMakeLists.txt  mathio.h
Source/MathIO/Discretizations/: CMakeLists.txt  discretizations.h  discretizations_addview.cc
Source/MathIO/Discretizations/PWL/: CMakeLists.txt  pwl.h  pwl_addview.cc  pwl_base.h  pwl_polygon.h  pwl_triangle.h
Source/MathIO/Quadrature/: CMakeLists.txt  quadrature.h  quadrature_legendregauss.h  quadrature_legendrepolynomials.h
Source/MeshIO/: CMakeLists.txt  meshio.h  meshio_getmeshhandler.cc  meshiofaces.h  meshiomatrix3x3.h  meshiovector.h
Source/MeshIO/Boundary/: CMakeLists.txt  boundary.h
Source/MeshIO/Cell/: CMakeLists.txt  cell.h  cell_polygon.h  cell_triangle.h
Source/MeshIO/MeshContinuum/: CMakeLists.txt  meshcontinuum.h
Source/MeshIO/MeshHandler/: CMakeLists.txt  meshhandler.h
Source/MeshIO/Region/: CMakeLists.txt  region.h
Source/MeshIO/SurfaceMesh/: CMakeLists.txt  surfacemesh.h  surfacemesh_export.cc  surfacemesh_load.cc  surfacemesh_updateconnections.cc
Source/MeshIO/VolumeMesher/: CMakeLists.txt  volumemesher.h  volumemesher_mapper.cc  volumemesher_utilities.cc
Source/PhysicsIO/: CMakeLists.txt  physicsio.h
Source/PhysicsIO/Solvers/: CMakeLists.txt  solvers.h
Source/PhysicsIO/Solvers/Boundary/: CMakeLists.txt  boundary.h  boundary_dirichlet.h  boundary_reflecting.h
Source/PhysicsIO/Solvers/Diffusion2D/: CMakeLists.txt  diffusion2d.h  diffusion2d_cell_loop.cc  diffusion2d_constrdestr.cc  diffusion2d_execute.cc  diffusion2d_initialize.cc  diffusion2d_initializeitems.cc
Source/TextIO/: CMakeLists.txt  textio.h  textio_strings.cc
